--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -1,7 +1,23 @@
 <template bindable="router">
-    <div class="ui secondary large menu">
+    <div class="ui large top fixed menu transition visible" style="display: flex !important;">
+        <div class="ui container">
+            <a repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''} item" href.bind="row.href">
+                ${row.title}
+            </a>
+            <div class="right menu">
+                <div class="item">
+                    <a class="ui button" route-href="route: login">Log in</a>
+                </div>
+                <div class="item">
+                    <a class="ui primary button">Sign Up</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!--<div class="ui secondary large menu">
         <a repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''} item" href.bind="row.href">
             ${row.title}
         </a>
-    </div>
+    </div>-->
 </template>
