--- a/src/user/index.html
+++ b/src/user/index.html
@@ -1,5 +1,5 @@
 <template>
-    <section>
+    <div class="ui container">
         <h2 class="ui header">${heading}</h2>
 
         <div class="ui grid">
@@ -12,5 +12,5 @@
                 <router-view></router-view>
             </div>
         </div>
-    </section>
+    </div>
 </template>
