--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -6,7 +6,7 @@
             </a>
             <div class="right menu">
                 <div class="item">
-                    <a class="ui button" route-href="route: login">Log in</a>
+                    <a class="ui button">Log in</a>
                 </div>
                 <div class="item">
                     <a class="ui primary button">Sign Up</a>
