--- a/src/account/login.html
+++ b/src/account/login.html
@@ -11,13 +11,13 @@
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="email" placeholder="E-mail address">
+                            <input type="text" name="email" value.bind="email" placeholder="E-mail address">
                         </div>
                     </div>
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="lock icon"></i>
-                            <input type="password" name="password" placeholder="Password">
+                            <input type="password" name="password" value.bind="password" placeholder="Password">
                         </div>
                     </div>
                     
