--- a/src/welcome.html
+++ b/src/welcome.html
@@ -7,8 +7,8 @@
                         ${row.title}
                     </a>
                     <div class="right item">
-                        <a class="ui inverted button" route-href="route: login">Log in</a>
-                        <a class="ui inverted button">Sign Up</a>
+                        <a if.bind="!isAuthenticated" class="ui inverted button" click.delegate="login()">Log in</a>
+                        <a if.bind="isAuthenticated" class="ui inverted button" click.delegate="logout()">Log out</a>
                     </div>
                 </div>
             </div>
@@ -18,7 +18,7 @@
                     Imagine-a-Company
                 </h1>
                 <h2>Do whatever you want when you want to.</h2>
-                <a class="ui huge primary button" route-href="route: login">Get Started <i class="right arrow icon"></i></a>
+                <a class="ui huge primary button">Get Started <i class="right arrow icon"></i></a>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
                 </div>
                 <div class="row">
                     <div class="center aligned column">
-                        <a class="ui huge button" route-href="route: login">Check Them Out</a>
+                        <a class="ui huge button">Check Them Out</a>
                     </div>
                 </div>
             </div>
