--- a/src/user/index.html
+++ b/src/user/index.html
@@ -1,16 +1,20 @@
 <template>
+    <require from="./nav-bar"></require>
+
     <div class="ui container">
         <h2 class="ui header">${heading}</h2>
 
-        <div class="ui grid">
+        <nav-bar></nav-bar>
+
+        <!--<div class="ui grid">
             <div class="four wide column">
                 <div class="ui secondary vertical pointing menu">
                     <a repeat.for="row of router.navigation" class="item ${row.isActive ? 'active' : ''}" href.bind="row.href">${row.title}</a>
                 </div>
             </div>
-            <div class="twelve wide column">
+            <div class="twelve wide column">-->
                 <router-view></router-view>
-            </div>
-        </div>
+            <!--</div>
+        </div>-->
     </div>
 </template>
