--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -74,19 +74,24 @@
         </div>
     </div>
 
+    <confirmation-modal header="Delete alert" message="Are you sure you want to delete this alert?"></confirmation-modal>
+
     <!--<div class="ui cards">
-        <div class="${alert.isActive ? 'green' : ''} card" repeat.for="alert of alerts">
+        <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts">
             <div class="content">
-                <img class="right floated mini ui image" src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+                <div class="right floated mini ui image">
+                    <img src.bind="alert.imageUrl">
+                </div>
                 <div class="header">
                     <a route-href="route: alert; params.one-time: { alertId: alert.id }">${alert.title}</a>
                 </div>
                 
                 <div class="meta">
-                    Last updated ${alert.lastUpdate | timeAgo}
+                    <span show.bind="alert.isActive">Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</span>
+                    <span hide.bind="alert.isActive">Deactivated</span>
                 </div>
-                <div class="description">
-                    Current best price: ${alert.bestCurrentPrice | price}
+                <div class="description" if.bind="alert.isActive">
+                    Current best price: ${alert.bestCurrentDeal.price | price} at <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank">${alert.bestCurrentDeal.productUrl | hostName}</a>
                 </div>
             </div>
             <div class="extra content">
