--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -28,6 +28,16 @@
             <h4 class="ui sub header">New Alert</h4>
             <p>Add a new alert to your collection!</p>
 
+            <div class="ui tiny visible info message">
+                <div class="header">
+                    At the moment, these sites are supported: 
+                </div>
+                <ul class="list">
+                    <li>Amazon</li>
+                    <li>BestBuy</li>
+                </ul>
+            </div>
+
             <div class="field six columns wide">
                 <div class="ui right action input">
                     <input value.bind="newAlertUrl" type="url" placeholder="Url">
