--- a/src/user/alert.html
+++ b/src/user/alert.html
@@ -1,4 +1,6 @@
 <template>
+    <require from="./components/price-graph"></require>
+
     <form class="ui ${loading ? 'loading' : ''} form" submit.delegate="save()" role="form">
         <div class="ui text menu">
             <div class="ui sixteen wide h3 transparent icon input field">
@@ -49,11 +51,21 @@
                 </div>
             </div>
         </div>
-
-        <div class="ui divider"></div>
-
-        <a class="ui button" tabindex="0" route-href="route: alerts">Back</a>
     </form>
+
+    <div class="ui divider"></div>
+    <div class="ui stackable center aligned grid container">
+        <div class="fourteen wide column">
+            <div class="ui stackable center aligned vertically padded grid">
+                <div class="twelve wide column">
+                    <h3 class="ui header">Price history</h3>
+                    <price-graph title.one-time="title" data.one-way="alertHistory"></price-graph>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <a class="ui button" tabindex="0" route-href="route: alerts">Back</a>
 
     <confirmation-modal header="Delete alert" message="Are you sure you want to delete the selected entry in this alert?"></confirmation-modal>
 </template>
