Added colors to the price graph

--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -35,6 +35,11 @@
                 <ul class="list">
                     <li>Amazon</li>
                     <li>BestBuy</li>
+                    <li>Lego</li>
+                    <li>Newegg</li>
+                    <li>Staples</li>
+                    <li>Tiger Direct</li>
+                    <li>Toys R Us</li>
                 </ul>
             </div>
 
