--- a/src/user/alert.html
+++ b/src/user/alert.html
@@ -46,6 +46,11 @@
                         <ul class="list">
                             <li>Amazon</li>
                             <li>BestBuy</li>
+                            <li>Lego</li>
+                            <li>Newegg</li>
+                            <li>Staples</li>
+                            <li>Tiger Direct</li>
+                            <li>Toys R Us</li>
                         </ul>
                     </div>
                 </div>
