Added user settings

--- a/src/user/account.html
+++ b/src/user/account.html
@@ -1,6 +1,11 @@
 <template>
     <form class="ui form" submit.delegate="save()" role="form">
-        <h4 class="ui dividing header">Information</h4>
+        <div class="ui text menu">
+            <div class="item">
+                <h3 class="ui header">Personal information</h3>
+            </div>
+        </div>
+
         <div class="field">
             <label>Name</label>
             <div class="two fields">
