--- a/src/welcome.html
+++ b/src/welcome.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="column">
                         <h2 class="ui icon header">
-                            <img class="ui icon image" alt="Renaud-Bray" src="./images/renaudbray.png">
+                            <img class="ui icon image" alt="Renaud-Bray" src="./images/renaud-bray.png">
                         </h2>
                     </div>
                 </div>
