--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -1,4 +1,6 @@
 <template>
+    <require from="./components/add-source"></require>
+
     <div class="ui text menu">
         <div class="item">
             <h3 class="ui header">Alerts</h3>
@@ -24,37 +26,7 @@
     </div>
 
     <div show.bind="isAdding">
-        <form class="ui ${isCreatingAlert ? 'loading' : ''} form" submit.delegate="create()" role="form">
-            <h4 class="ui sub header">New Alert</h4>
-            <p>Add a new alert to your collection!</p>
-
-            <div class="ui tiny visible info message">
-                <div class="header">
-                    At the moment, these sites are supported: 
-                </div>
-                <ul class="list">
-                    <li>Amazon</li>
-                    <li>BestBuy</li>
-                    <li>Lego</li>
-                    <li>Newegg</li>
-                    <li>Staples</li>
-                    <li>Tiger Direct</li>
-                    <li>Toys R Us</li>
-                </ul>
-            </div>
-
-            <div class="field six columns wide">
-                <div class="ui right action input">
-                    <input value.bind="newAlertUrl" type="url" placeholder="Url">
-                    <button class="ui teal button ${newAlertUrl.length ? '' : 'disabled'}">
-                        <i class="add icon"></i>
-                        Add
-                    </button>
-                </div>
-            </div>
-            
-            <div class="ui button" click.delegate="cancel()">Cancel</div>
-        </form>
+        <add-source class="${isCreatingAlert ? 'loading' : ''}" add.call="create(newAlertUrl)" cancel.call="cancel()"></add-source>
 
         <div class="ui divider"></div>
     </div>
@@ -89,9 +61,9 @@
         </div>
     </div>
 
-    <confirmation-modal header="Delete alert" message="Are you sure you want to delete this alert?"></confirmation-modal>
+    <div class="ui section divider"></div>
 
-    <!--<div class="ui cards">
+    <div class="ui cards">
         <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts">
             <div class="content">
                 <div class="right floated mini ui image">
@@ -120,5 +92,28 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
+
+    <div class="ui section divider"></div>
+
+    <div class="ui link cards">
+        <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts">
+            <div class="image">
+                <img src.bind="alert.imageUrl">
+            </div>
+            <div class="content">
+                <div class="header">${alert.title}</div>
+                <div class="meta">
+                    <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank">${alert.bestCurrentDeal.price | price} at ${alert.bestCurrentDeal.productUrl | hostName}</a>
+                </div>
+            </div>
+            <div class="extra content">
+                <span class="right floated" show.bind="alert.isActive">
+                    Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <confirmation-modal header="Delete alert" message="Are you sure you want to delete this alert?"></confirmation-modal>
 </template>
