--- a/src/user/alert.html
+++ b/src/user/alert.html
@@ -41,7 +41,7 @@
             <div class="ui stackable center aligned vertically padded grid">
                 <div class="twelve wide column">
                     <h3 class="ui header">Price history</h3>
-                    <price-graph title.one-time="title" data.one-way="alertHistory"></price-graph>
+                    <!--<price-graph title.one-time="title" data.one-way="alertHistory"></price-graph>-->
                 </div>
             </div>
         </div>
