--- a/src/welcome.html
+++ b/src/welcome.html
@@ -17,7 +17,7 @@
                 <h1 class="ui inverted header">
                     price. alerts.
                 </h1>
-                <h3>Need to buy something?</h3>
+                <h3>Planning to buy something?</h3>
                 <h2>Stop paying too much!</h2>
                 <a class="ui huge primary button">Get Started <i class="right arrow icon"></i></a>
             </div>
