Added image and activate button in alert page

--- a/src/user/alert/index.html
+++ b/src/user/alert/index.html
@@ -1,11 +1,23 @@
 <template>
     <div style="background: rgb(6, 37, 40); color: white;">
         <div class="ui container" style="position: relative; padding: 3em 0 0 0;">
-            <h3 style="font-weight: 200; margin: 0 0 0 2em;">Product Alert</h3>
-            <h1 class="ui sixteen wide h3 transparent icon input field" style="margin-top: 1em;">
-                <i class="edit icon" style="color: white; position: absolute; left: 0; background: rgba(255, 255, 255, 0.3); border-radius: .28571429rem 0 0 .28571429rem; width: 2.67142857rem !important;"></i>
-                <textarea value.bind="title & updateTrigger:'blur'" class="input" rows="2"></textarea>
-            </h1>
+            <h3 style="font-weight: 200; margin: 0 0 2em 2em;">Product Alert</h3>
+            <img class="ui small inline image" src="https://images-na.ssl-images-amazon.com/images/I/71kliP%2BCIfL._SX522_.jpg" style="vertical-align: bottom;">
+            <span style="margin-left: 1em; display: inline-block;">
+                <h1 class="ui sixteen wide h3 transparent icon input field" style="margin-top: 1em;">
+                    <i class="edit icon" style="color: white; position: absolute; left: 0; background: rgba(255, 255, 255, 0.3); border-radius: .28571429rem 0 0 .28571429rem; width: 2.67142857rem !important;"></i>
+                    <textarea value.bind="title & updateTrigger:'blur'" class="input" rows="2"></textarea>
+                </h1>
+
+                <div class="ui mini form" style="margin: 0.7rem 0 2rem 3.67142857rem;">
+                    <div class="inline field">
+                        <div class="ui checkbox">
+                            <input type="checkbox" checked.bind="isActive" change.delegate="changeActive()">
+                            <label style="color: white !important;">Receive email notifications for this product</label>
+                        </div>
+                    </div>
+                </div>
+            </span>
 
             <div class="ui inverted secondary pointing text menu">
                 <div repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''} item">
@@ -18,6 +30,8 @@
     <div class="ui container" style="position: relative;">
         <router-view></router-view>
 
-        <a class="ui button" tabindex="0" route-href="route: alerts">Back</a>
+        <div class="ui padded basic segment">
+            <a class="ui button" tabindex="0" route-href="route: alerts">Back</a>
+        </div>
     </div>
 </template>
