--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -30,9 +30,7 @@
 
         <confirmation-modal header="Delete alert" message="Are you sure you want to delete this alert?"></confirmation-modal>
 
-        <div show.bind="isAdding">
-            <add-source class="${isCreatingAlert ? 'loading' : ''}" add.call="create(newAlertUrl)" cancel.call="cancel()"></add-source>
-        </div>
+        <add-source class="${isCreatingAlert ? 'loading' : ''}" add.call="create(newAlertUrl)" cancel.call="cancel()"></add-source>
 
         <div class="ui link cards" show.bind="alerts.length">
             <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts">
@@ -53,7 +51,7 @@
             </div>
         </div>
 
-        <div class="ui overlay" hide.bind="alerts.length || isAdding">
+        <div class="ui overlay" hide.bind="alerts.length">
             <div style="width: 100%; position: absolute; top: 50%; left: 0;">
                 <p style="text-align: center;">You are not watching any product right now.</p>
                 <p style="text-align: center;">Get started!</p>
