--- a/src/user/nav-bar.html
+++ b/src/user/nav-bar.html
@@ -1,5 +1,5 @@
 <template>
-    <div style="background: rgb(6, 37, 40); color: white;">
+    <div class="primary-dark" style="color: white;">
         <div class="ui container" style="position: relative;">
             <div class="ui inverted secondary pointing menu" style="padding: 1em 0;">
                 <a route-href="route: alerts" class="item">
