--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -1,30 +1,32 @@
 <template>
     <require from="../components/add-source"></require>
 
-    <div class="ui big circular icon red button" click.delegate="addSource()"
-        style="position: absolute; top: calc(-3.21em); right: 20%;">
-        <i class="plus icon"></i>
-    </div>
+    <div class="ui container">
+        <div class="ui big circular icon red button" click.delegate="addSource()"
+            style="position: absolute; top: calc(-1.3em); right: 20%;">
+            <i class="plus icon"></i>
+        </div>
 
-    <form class="ui ${loading ? 'loading' : ''} form" submit.delegate="save()" role="form">
-        <div class="ui relaxed items" style="width: 80%; margin: 0 auto;">
-            <div repeat.for="entry of alert.entries" class="item" style="margin: 2.5em 0;">
-                <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank">
-                    <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
-                </a>
-                <div class="middle aligned content">
-                    <a class="header" href.bind="entry.uri" target="_blank">${entry.lastPrice | price}</a>
-                </div>
-                <div class="six wide field extra">
-                    <div class="left floated content">
-                        <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)">
-                            <i class="icon remove"></i>
+        <form class="ui ${loading ? 'loading' : ''} form" submit.delegate="save()" role="form">
+            <div class="ui relaxed items" style="width: 80%; margin: 0 auto;">
+                <div repeat.for="entry of alert.entries" class="item" style="margin: 2.5em 0;">
+                    <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank">
+                        <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
+                    </a>
+                    <div class="middle aligned content">
+                        <a class="header" href.bind="entry.uri" target="_blank">${entry.lastPrice | price}</a>
+                    </div>
+                    <div class="six wide field extra">
+                        <div class="left floated content">
+                            <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)">
+                                <i class="icon remove"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 
     <add-source containerless class="${isCreatingAlert ? 'loading' : ''}" add.call="create(newAlertUrl)" cancel.call="cancel()"></add-source>
 
