--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./components/add-source"></require>
 
-    <div style="background: rgb(6, 37, 40); color: white;">
+    <div class="primary-dark" style="color: white;">
         <div class="ui container" style="position: relative;">
             <div class="ui text menu" style="margin: 0; padding: 3em 0;">
                 <div class="item">
@@ -23,7 +23,41 @@
         </div>
     </div>
 
-    <div class="ui container">
+    <div class="primary-light">
+        <div class="ui container" show.bind="alerts.length">
+            <div class="ui link cards">
+                <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts">
+                    <div class="image">
+                        <img src.bind="alert.imageUrl">
+                    </div>
+                    <div class="content">
+                        <div class="header">${alert.title}</div>
+                        <div class="meta">
+                            <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank">${alert.bestCurrentDeal.price | price} at ${alert.bestCurrentDeal.productUrl | hostName}</a>
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated" show.bind="alert.isActive">
+                            Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="ui overlay" hide.bind="alerts.length">
+            <div style="width: 100%; position: absolute; top: 50%; left: 0;">
+                <p style="text-align: center;">You are not watching any product right now.</p>
+                <p style="text-align: center;">Get started!</p>
+                <div style="text-align: center;">
+                    <div class="ui primary primary-action button" click.delegate="addAlert()">
+                        <i class="plus icon"></i>
+                        Create a product alert
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="ui ${isUpdatingAlert ? 'active': ''} inverted dimmer">
             <div class="ui text loader">Updating</div>
         </div>
@@ -31,37 +65,5 @@
         <confirmation-modal header="Delete alert" message="Are you sure you want to delete this alert?"></confirmation-modal>
 
         <add-source class="${isCreatingAlert ? 'loading' : ''}" add.call="create(newAlertUrl)" cancel.call="cancel()"></add-source>
-
-        <div class="ui link cards" show.bind="alerts.length">
-            <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts">
-                <div class="image">
-                    <img src.bind="alert.imageUrl">
-                </div>
-                <div class="content">
-                    <div class="header">${alert.title}</div>
-                    <div class="meta">
-                        <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank">${alert.bestCurrentDeal.price | price} at ${alert.bestCurrentDeal.productUrl | hostName}</a>
-                    </div>
-                </div>
-                <div class="extra content">
-                    <span class="right floated" show.bind="alert.isActive">
-                        Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}
-                    </span>
-                </div>
-            </div>
-        </div>
-
-        <div class="ui overlay" hide.bind="alerts.length">
-            <div style="width: 100%; position: absolute; top: 50%; left: 0;">
-                <p style="text-align: center;">You are not watching any product right now.</p>
-                <p style="text-align: center;">Get started!</p>
-                <div style="text-align: center;">
-                    <div class="ui primary button" click.delegate="addAlert()">
-                        <i class="plus icon"></i>
-                        Create a product alert
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </template>
