--- a/src/user/nav-bar.html
+++ b/src/user/nav-bar.html
@@ -10,14 +10,14 @@
                     <div class="ui right dropdown item">
                         Account
                         <i class="dropdown icon"></i>
-                        <div class="menu">
+                        <div class="menu primary-dark" style="border-color: rgba(255, 255, 255, 0.7); border-radius: 2px;">
                             <div class="item">
                                 <a route-href="route: account">Account settings</a>
                             </div>
                             <div class="item">
                                 <a route-href="route: settings">Alert settings</a>
                             </div>
-                            <div class="divider"></div>
+                            <div class="divider" style="border-color: rgba(255, 255, 255, 0.7);"></div>
                             <div class="item">
                                 <a click.delegate="logout()">Logout</a>
                             </div>
