--- a/src/user/nav-bar.html
+++ b/src/user/nav-bar.html
@@ -6,23 +6,13 @@
                     <img src="http://hemsolucoesfinanceira.com.br/img/logo.png">
                 </a>
                 
-                <div class="right text menu item">
-                    <div class="ui right dropdown item">
-                        Account
-                        <i class="dropdown icon"></i>
-                        <div class="menu primary-dark" style="border-color: rgba(255, 255, 255, 0.7); border-radius: 2px;">
-                            <div class="item">
-                                <a route-href="route: account">Account settings</a>
-                            </div>
-                            <div class="item">
-                                <a route-href="route: settings">Alert settings</a>
-                            </div>
-                            <div class="divider" style="border-color: rgba(255, 255, 255, 0.7);"></div>
-                            <div class="item">
-                                <a click.delegate="logout()">Logout</a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="right icon menu">
+                    <a class="item" route-href="route: account">
+                        <i class="large settings icon"></i>
+                    </a>
+                    <a class="item" click.delegate="logout()">
+                        <i class="large sign out icon"></i>
+                    </a>
                 </div>
             </div>
         </div>
