Put the settings in a different page

--- a/src/user/nav-bar.html
+++ b/src/user/nav-bar.html
@@ -7,7 +7,7 @@
                 </a>
                 
                 <div class="right icon menu">
-                    <a class="item" route-href="route: account">
+                    <a class="item" route-href="route: settings">
                         <i class="large settings icon"></i>
                     </a>
                     <a class="item" click.delegate="logout()">
